2007-07-07  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #5053: imgNameNotRandom on TMENU/GMENU could break rollover behaviour (thanks to Ralf Hettinger)

2007-07-07  Wolfgang Klinger <wk@plan2.net>

	* Changed back references \1 to ${1} in regular expressions in tslib_fe where necessary

2007-07-07  Michael Stucki  <michael@typo3.org>

	* Added new static_tsconfig_help data based on TYPO3 4.1 CoreDocs. Kudos to Stephane Schitter and Francois Suter for rewriting a backend module that allows to update this data again! (This functionality was broken after switching to TER2.)

2007-07-06  Wolfgang Klinger <wk@plan2.net>

	* Implemented feature request #1919: TCAdefaults setting in page TS

2007-07-06  Michael Stucki  <michael@typo3.org>

	* Fix in indexed search: List of indexed pages could be broken if mutli-byte chars are cut in the middle (patch by Karsten Dambekalns)
	* Make field selection work in browse_links.php popup (patch by Christian Jul Jensen)
	* Fixed bug #5094: Record alt_label was not processed (patch by Volker Graubaum and Thomas Hempel)
	* Added feature #5588: Add "linkAccessRestrictedPages" property to typolink function (patch by Franz Holzinger)

2007-07-02  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #4623: Content encoding with x-gzip not possible in IE7
	* Fixed bug #5789: JS error in new content element wizard with a single item

2007-06-25  Dmitry Dulepov  <dmitry@typo3.org>

	* Added $GLOBALS['TYPO3_DB']->sql_free_result() to TCEmain::rawCopyPageContent() to avoid resource waste

2007-06-13  Andreas Otto  <andreas.otto@dkd.de>

	* Added status headers: In class.tslib_fe.php status header were set when an error occurs after which TYPO3 throws an exit() statement. In addition to that t3lib_div::syslog() is called to write an entry to the syslog.

2007-06-13  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #5778: Missleading comment in TCEmain::copyRecord_procBasedOnFieldType()

2007-06-08  Oliver Hader  <oh@inpublica.de>
